// protoc --java_out=./src ./src/com/poker/protocols/server/proto/GameTable.proto 
package com.poker.protocols.server.proto; 

option java_package = "com.poker.protocols.server";
option java_outer_classname = "GameTableProto";

message GameTable{
	optional int32  tid  = 1;
	optional int32  count    = 2;
}